--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {%block body %}
-    {% if app.user %}
+    {% if is_granted('ROLE_PHOTO') %}
         <div class="text-center text-4xl p-5 m-5 rounded border-4">Mon compte
         <div class="grid grid-cols-6 gap-12 justify-items-center mt-6 text-2xl">
             <div class="col-span-2 font">
                 <h1 class="font-bold">Nombre de dossiers</h1>
-                <div class="text-center">{{ app.user.folders | length }}</div>
+                <div class="text-center">{{ app.user.personalFolder | length }}</div>
             </div>
             <div class="col-span-2">
                 <h1 class="font-bold">Nombre de photos</h1>
