--- a/templates/folder/privateFolder.html.twig
+++ b/templates/folder/privateFolder.html.twig
@@ -5,12 +5,12 @@
     <div class="grid justify-center">
         <h1 class="text-4xl font-extrabold">Listes des dossiers privé</h1>
         {% for folder in folders %}
-            {% if folder.owner == app.user and folder.folder == null %}
+            {% if folder.owner == app.user and folder.parentFolder == null %}
                 <div class="border-2 flex-col p-2 mt-3 mb-3">
-                    <a href="{{ path('app_folder_show', {'id': folder.id}) }}">{{ folder.name }} ({{ folder.photoCollection | length }})</a>
+                    <a href="{{ path('app_folder_show', {'id': folder.id}) }}">{{ folder.name }} ({{ folder.childrenPhoto | length }})</a>
                     <div>sous-dossiers :</div>
                     <ul>
-                        {% for subfolder in folder.subfolders %}
+                        {% for subfolder in folder.childrenFolder %}
                             <li class="pl-3" >
                                 <a href="{{ path('app_folder_show', {'id': subfolder.id}) }}">{{ subfolder.name }} ({{ subfolder.photoCollection | length }})</a>
                                 <div>sous-dossiers : {{ subfolder.subfolders | length }}</div>
