--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -1,13 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {%block body %}
-    {% if is_granted('ROLE_USER') %}
+    {% if is_granted('ROLE_PHOTO') %}
         <div class="text-center text-4xl p-5 m-5 rounded border-4">Mon compte
         <div class="grid grid-cols-6 gap-12 justify-items-center mt-6 text-2xl">
             <div class="col-span-2 font">
                 <h1 class="font-bold">Nombre de dossiers</h1>
-                <div class="text-center">0</div>
-{#                {{ app.user.personalFolder | length }}#}
+                <div class="text-center">{{ app.user.personalFolder | length }}</div>
             </div>
             <div class="col-span-2">
                 <h1 class="font-bold">Nombre de photos</h1>
@@ -28,5 +27,31 @@
 
         </div>
         </div>
+        {% elseif is_granted('ROLE_USER') %}
+            <div class="text-center text-4xl p-5 m-5 rounded border-4">Mon compte
+                <div class="grid grid-cols-6 gap-12 justify-items-center mt-6 text-2xl">
+                    <div class="col-span-2 font">
+                        <h1 class="font-bold">Nombre de dossiers</h1>
+                        <div class="text-center">{{ app.user.allowedFolder | length }}</div>
+                    </div>
+                    <div class="col-span-2">
+                        <h1 class="font-bold">Nombre de photos</h1>
+                        <div class="text-center">{{ statsNbPhoto }}</div>
+                    </div>
+                    <div class="col-span-2">
+                        <h1 class="font-bold">Nombre de tags</h1>
+                        <div class="text-center">{{ statsNbTags }}</div>
+                    </div>
+                    <div class="col-span-3">
+                        <h1 class="font-bold">Tags le plus populaire</h1>
+                        <div class="text-center">{{ statsMostPopularTag }}</div>
+                    </div>
+                    <div class="col-span-3">
+                        <h1 class="font-bold">Dossier le plus populaire</h1>
+                        <div class="text-center">{{ statsMostPopularFolder }}</div>
+                    </div>
+
+                </div>
+            </div>
     {% endif %}
 {% endblock %}
