--- a/templates/folder/privateFolder.html.twig
+++ b/templates/folder/privateFolder.html.twig
@@ -25,8 +25,8 @@
             <a class="text-white bg-blue-700 hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" href="{{ path('app_folder_new') }}">Créer votre dossier</a>
 
     </div>
-    {% endif %}
-    {% if is_granted('ROLE_USER') %}
+
+    {% elseif is_granted('ROLE_USER') %}
     <div class="grid justify-center">
     <h1 class="text-4xl font-extrabold">Listes des dossiers privé</h1>
     {% for folder in app.user.allowedFolder %}
